--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "@vercel/node": "^3.0.0",
     "openai": "^4.0.0",
     "dotenv": "^16.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
+    "start": "vercel dev",
+    "deploy": "vercel deploy"
   }
 }
